# homework

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 65f3ee7f059e_initial.py
app/: main.py  utils.py
app/api/: deps.py
app/api/api_v1/: __init__.py
app/api/api_v1/endpoints/: policies.py
app/core/: config.py  logging_setup.json
app/db/: __init__.py  async_db_api.py
app/db/models/: address_dbo.py  coverage_dbo.py  person_dbo.py  policy_dbo.py  premium_dbo.py
app/models/: address.py  coverage.py  enums.py  person.py  policy.py  premium.py
app/schemas/: HttpError.py  policy.py
precommit/: update_changelog.sh
tests/: conftest.py  factories.py  fake_db.py
tests/endpoints/: test_policies.py
